# splashsurf

./: .gitignore  CHANGELOG.md  CITATION.cff  CNAME  Cargo.toml  LICENSE  README.md  RELEASE_CHECKLIST.md  index.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build.yml  pysplashsurf_CI.yml  pysplashsurf_Sphinx.yml  pysplashsurf_Test.yml
_includes/: head-custom.html
_layouts/: default.html
assets/css/: style.scss
data/: .gitattributes  bunny_frame_14_7705_particles.vtk  cube.ply  cube_2366_particles.vtk  cube_8_particles.vtk  cube_8_particles.vtu  dam_break_frame_23_24389_particles.bgeo  dam_break_frame_23_24389_particles.vtk  dam_break_frame_9_6859_particles.bgeo  density_grid_loop_subdomain_33.json  double_dam_break_frame_01_4732_particles.vtk  double_dam_break_frame_26_4732_particles.vtk  dual_dodec_41273_particles.vtk  fluid_250_particles.vtu  fluid_encoded_250_particles.vtu  free_particles_1000_particles.vtk  free_particles_125_particles.vtk  hilbert2_18856_particles.vtk  hilbert2_7954_particles.vtk  hilbert_46843_particles.bgeo  hilbert_46843_particles.vtk  octocat_32614_particles.bgeo  octocat_32614_particles.vtk  pentagonal_hexecontahedron_32286_particles.bgeo  pentagonal_hexecontahedron_32286_particles.vtk  sailors_knot_19539_particles.vtk
pysplashsurf/: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  build.rs  pyproject.toml  python_environment.yaml
pysplashsurf/pysplashsurf/: __init__.py  bgeo.py  pysplashsurf.pyi
pysplashsurf/pysplashsurf/docs/: requirements.txt
pysplashsurf/pysplashsurf/docs/source/: api.rst  classes.rst  conf.py  functions.rst  index.md  index.rst  introduction.md  methods.rst  usage.rst
pysplashsurf/src/: aabb.rs  decimation.rs  laplacian_smoothing.rs  lib.rs  marching_cubes.rs  marching_cubes_cleanup.rs  mesh.rs  neighborhood_search.rs  pipeline.rs  post_processing.rs  postprocessing.rs  reconstruct_surface.rs  reconstruction.rs  sph_interpolation.rs  structs.rs  uniform_grid.rs  utils.rs
pysplashsurf/tests/: ParticleData_Fluid_5.vtk  ParticleData_Fluid_50.bgeo  ParticleData_Random_1000.vtk  test_basic.py  test_bgeo.py  test_calling.py  test_sdf.py
splashsurf/: Cargo.toml  README.md
splashsurf/src/: allocator.rs  cli.rs  convert.rs  io.rs  lib.rs  logging.rs  main.rs  reconstruct.rs  reconstruction.rs
splashsurf/src/io/: bgeo_format.rs  json_format.rs  obj_format.rs  ply_format.rs  vtk_format.rs
splashsurf/src/tests/: cli.rs
splashsurf/tests/: test_pipeline.rs
splashsurf_lib/: Cargo.toml  README.md
splashsurf_lib/benches/: splashsurf_lib_benches.rs
splashsurf_lib/benches/benches/: bench_aabb.rs  bench_full.rs  bench_grid_loop.rs  bench_mesh.rs  bench_neighborhood.rs  bench_octree.rs  bench_subdomain_grid.rs  io.rs  mod.rs
splashsurf_lib/examples/: minimal_levelset.rs  minimal_sph_levelset.rs
splashsurf_lib/src/: aabb.rs  dense_subdomains.rs  density_map.rs  generic_octree.rs  generic_tree.rs  halfedge_mesh.rs  io.rs  kernel.rs  lib.rs  marching_cubes.rs  marching_cubes_lut.rs  mesh.rs  neighborhood_search.rs  numeric_types.rs  octree.rs  postprocessing.rs  profiling.rs  profiling_macro.rs  reconstruction.rs  reconstruction_octree.rs  sph_interpolation.rs  topology.rs  traits.rs  uniform_grid.rs  utils.rs  workspace.rs
splashsurf_lib/src/io/: bgeo_format.rs  io_utils.rs  json_format.rs  obj_format.rs  ply_format.rs  vtk_format.rs  xyz_format.rs
splashsurf_lib/src/marching_cubes/: marching_cubes_lut.rs  narrow_band_extraction.rs  stitching.rs  triangulation.rs
splashsurf_lib/tests/: test_octree.rs  uniform_grid_tests.rs
splashsurf_lib/tests/integration_tests/: io.rs  mod.rs  test_full.rs  test_mesh.rs  test_neighborhood_search.rs  test_octree.rs  test_simple.rs  test_subdomains.rs
splashsurf_lib/tests/integration_tests/io/: vtk.rs
splashsurf_studio/: README.md  properties.py
splashsurf_studio/src/: __init__.py  blender_manifest.toml  handlers.py  operators.py  panels.py  updater.py  utils.py
splashsurf_studio/src/wheels/: pysplashsurf-0.14.0.0-cp310-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pysplashsurf-0.14.0.0-cp310-abi3-win_arm64.whl
splashsurf_studio/wheels/: pysplashsurf-0.14.0.0-cp310-abi3-macosx_13_0_x86_64.whl  pysplashsurf-0.14.0.0-cp310-abi3-macosx_14_0_arm64.whl  pysplashsurf-0.14.0.0-cp310-abi3-win_amd64.whl
