[package]
name = "pysplashsurf"
version = "0.12.0"
edition = "2024"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
splashsurf = { path = "../splashsurf" }
splashsurf_lib = { path = "../splashsurf_lib" }
pyo3 = {version = "0.25.0", features = ["anyhow"]}
numpy = "0.25.0"
ndarray = "0.16.1"
bytemuck = { version = "1.23.0", features = ["extern_crate_alloc"] }
anyhow = "1.0.98"
pyo3-stub-gen = "0.10.0"

[features]
extension-module = ["pyo3/extension-module", "pyo3/abi3-py37"]
default = ["extension-module"]

[lib]
name = "pysplashsurf"
crate-type = ["cdylib", "rlib"]
