[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "pysplashsurf"
version = "0.11.0.0rc2"
description = "Python bindings for splashsurf, a surface reconstruction library for SPH simulations."
keywords = ["surface reconstruction", "marching cubes", "sph", "fluid", "particles", "mesh", "splashsurf", "splishsplash"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
]
dependencies = ["numpy"]

[project.optional-dependencies]
meshio = ["meshio"]

[project.scripts]
pysplashsurf = "pysplashsurf:run_pysplashsurf"

[project.urls]
homepage = "https://splashsurf.physics-simulation.org/"
repository = "https://github.com/InteractiveComputerGraphics/splashsurf.git"
