[package]
name = "splashsurf"
version = "0.12.0"
description = "Command-line tool for surface reconstruction of SPH particle data"
keywords = ["sph", "particle", "surface", "reconstruction", "marching-cubes"]
categories = ["command-line-utilities", "graphics", "science", "simulation", "visualization"]
readme = "README.md"
edition = "2024"

authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
splashsurf_lib = { path = "../splashsurf_lib", version = "0.12.0", features = ["vtk_extras", "profiling", "io"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
fern = "0.7"
chrono = "0.4.20"
anyhow = "1.0"
rayon = "1.7"
bytemuck = "1.9"
regex = "1.5.5"
walkdir = "2"
lexical-sort = "0.3"
indicatif = "0.17"
parking_lot = "0.12"
once_cell = "1.18"
