[package]
name = "splashsurf_lib"
version = "0.8.0"
authors = ["Fabian Löschner <loeschner@cs.rwth-aachen.de>"]
license = "MIT"
description = "Library for surface reconstruction of SPH particle data"
keywords = ["sph", "particle", "surface", "reconstruction", "marching-cubes"]
categories = ["graphics", "science", "simulation", "visualization", "rendering"]
readme = "README.md"
edition = "2021"

homepage = "https://github.com/w1th0utnam3/splashsurf"
repository = "https://github.com/w1th0utnam3/splashsurf"
documentation = "https://docs.rs/splashsurf_lib"

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
# Build with all features to properly document everything
all-features = true
# Run with specific configuration for special doc attributes
rustdoc-args = ["--cfg", "doc_cfg"]
# Build only for a single target as this crate does not have any platform specific behavior
default-target = "x86_64-unknown-linux-gnu"
targets = []

# Ignore the tests (especially the test mesh files) for publishing
exclude = [
    "tests/*",
    "benches/*",
]

[features]
default = []
vtk_extras = ["vtkio"]
profiling = ["lazy_static"]
io = ["vtk_extras", "vtkio", "ply-rs", "nom", "serde_json", "flate2"]

[dependencies]
log = "0.4"
nalgebra = { version = "0.30.1", features = ["rand", "bytemuck"] }
num = "0.4"
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10"
parking_lot = "0.12"
thread_local = "1.1.4"
rayon = "1.5"
dashmap = "5.3.3"
fxhash = "0.2"
bitflags = "^1.3.1"
smallvec = { version = "1.8", features = ["union"] }
arrayvec = "0.7"
bytemuck = "1.9"
bytemuck_derive = "1.1"
numeric_literals = "0.2"
rstar = "0.9"

# IO
vtkio = { version = "0.6", optional = true }
ply-rs = { version = "0.1.3", optional = true }
flate2 = { version = "1.0", optional = true }
nom = { version = "7.1", optional = true }
serde_json = { version = "1.0", optional = true }

# Needed for profiling feature
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
criterion = "0.3"
ultraviolet = "0.9"
sdfu = { git = "https://github.com/w1th0utnam3/sdfu", features = ["ultraviolet"], rev = "e39a4a8685a56a3430218b9f2dfd546ab2dbe2d6" }

[[bench]]
name = "splashsurf_lib_benches"
path = "benches/splashsurf_lib_benches.rs"
harness = false
