[package]
name = "splashsurf_lib"
version = "0.11.0"
authors = ["Fabian Löschner <loeschner@cs.rwth-aachen.de>"]
license = "MIT"
description = "Library for surface reconstruction of SPH particle data"
keywords = ["sph", "particle", "surface", "reconstruction", "marching-cubes"]
categories = ["graphics", "science", "simulation", "visualization", "rendering"]
readme = "README.md"
edition = "2024"

homepage = "https://splashsurf.physics-simulation.org"
repository = "https://github.com/InteractiveComputerGraphics/splashsurf"
documentation = "https://docs.rs/splashsurf_lib"

[package.metadata.docs.rs]
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
# Build with all features to properly document everything
all-features = true
# Build only for a single target as this crate does not have any platform specific behavior
default-target = "x86_64-unknown-linux-gnu"
targets = []

# Ignore the tests (especially the test mesh files) for publishing
exclude = ["tests/*", "benches/*"]

[features]
default = []
vtk_extras = ["vtkio"]
profiling = []
io = ["vtk_extras", "vtkio", "ply-rs", "nom", "serde_json", "flate2"]

[dependencies]
log = "0.4"
nalgebra = { version = "0.33", features = ["rand", "bytemuck"] }
num-traits = "0.2"
num-integer = "0.1"
anyhow = "1.0"
thiserror = "2.0"
itertools = "0.14.0"
parking_lot = "0.12"
thread_local = "1.1.4"
rayon = "1.7"
dashmap = "6.1.0"
fxhash = "0.2"
bitflags = "2.4"
arrayvec = "0.7"
bytemuck = { version = "1.9", features = ["extern_crate_alloc"] }
bytemuck_derive = "1.3"
numeric_literals = "0.2"
rstar = "0.12"

# IO
vtkio = { version = "0.6", optional = true }
#vtkio = { git = "https://github.com/elrnv/vtkio", optional = true , rev = "e14c8ff3caf84ae5e21c2ee70aa18275d6e54051" }
ply-rs = { version = "0.1.3", optional = true }
flate2 = { version = "1.0", optional = true }
nom = { version = "8.0", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5.1"
ultraviolet = "0.9"
sdfu = { git = "https://github.com/w1th0utnam3/sdfu", features = [
  "ultraviolet",
], rev = "e39a4a8685a56a3430218b9f2dfd546ab2dbe2d6" }

[[bench]]
name = "splashsurf_lib_benches"
path = "benches/splashsurf_lib_benches.rs"
harness = false
